# codeatlas

./: LICENSE  README.md  codeatlas.policy.example.json  pyproject.toml
.github/workflows/: ci.yml
src/codeatlas/: __init__.py  analysis.py  cli.py  exporters.py  git_history.py  indexer.py  policy.py  web.py
tests/: test_analysis.py  test_git_history.py  test_indexer.py  test_policy.py  test_resolution_export.py  test_web.py
