[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeatlas"
version = "0.2.0"
description = "A fast local codebase indexer that turns Python repositories into navigable symbol and dependency graphs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "John Johansson" }]
keywords = ["code-analysis", "ast", "dependency-graph", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
codeatlas = "codeatlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codeatlas"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
